# openrelik-workers-1

.github/workflows/: combine-dependabot-prs.yaml
workers/openrelik-worker-extraction/: pyproject.toml
workers/openrelik-worker-grep/: pyproject.toml
workers/openrelik-worker-strings/: pyproject.toml
workers/openrelik-worker-yara/: Dockerfile  pyproject.toml
workers/openrelik-worker-yara/src/: tasks.py
workers/openrelik-worker-yara/tests/: test_tasks.py
